# file-manager-assistant

./: .gitignore  README.md  README_en.md  index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
.github/workflows/: release-build.yml
electron/: main.ts  preload.cts  preload.ts
scripts/: generateBrandAssets.ps1  runPerformanceTest.mjs
src/: App.tsx  i18n.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_control.rs  db.rs  file_ops.rs  lib.rs  main.rs  path_filter.rs  scanner.rs  settings.rs  watcher.rs
src-tauri/src/db/: commands.rs  mod.rs  schema.rs  types.rs
src-tauri/src/db/classification/: builtin_rules.rs  engine.rs  mod.rs  naming.rs
src-tauri/src/db/queries/: files.rs  mod.rs  operations.rs  rules_repo.rs
src-tauri/src/db/tests/: helpers.rs  part1.rs  part2.rs
src-tauri/src/migrations/: 0001_initial.sql  0002_classification.sql  0003_fts.sql
src-tauri/tests/: classification_status.rs  dedupe.rs  fts_benchmark.rs  settings.rs
src/api/: tauriApi.ts
src/components/: AppRuntimeProviders.tsx  AppShell.tsx  CommandModal.tsx  DatabaseBootstrapper.tsx  ErrorBoundary.css  ErrorBoundary.tsx  ShellChrome.tsx
src/contexts/: AppContexts.tsx
src/core/: concurrency.ts  database.ts  demoData.ts  fileMoves.ts  fileScanner.ts  fileTypes.ts  id.ts  operationExecutor.ts  operationPlanner.ts  restoreExecutor.ts  ruleEngine.ts
src/hooks/: fsWatcherQueue.ts  useAppChrome.ts  useAppSettings.ts  useFileLibrary.ts  useFsWatcher.ts  useOperationQueue.ts  useScanManager.ts  useScanProgress.ts  useWindowBehavior.ts
src/mocks/: demoData.ts
src/store/: useAppStore.ts  useFileLibraryStore.ts  useOperationQueueStore.ts  useRulesStore.ts  (+1 more)
tests/: appArchitecture.test.ts  appSettings.test.ts  fileScanner.test.ts  fsWatcher.test.ts  hotkeys.test.ts  hubBuckets.test.ts  i18n.test.ts  libraryScope.test.ts  listenerRegistration.test.ts  operationLogs.test.ts  operationQueueCallbacks.test.ts  operationSecurity.test.ts  organizeQueue.test.ts  performanceScript.test.ts  restoreExecutor.test.ts  revealInFolderAction.test.ts  ruleBuilder.test.ts  ruleEngine.test.ts  scanManager.test.ts  searchDatabase.test.ts  searchPerformance.test.ts  searchSpotlight.test.ts  tauriApi.test.ts  uiEmptyStates.test.ts  virtualization.test.ts  windowBehavior.test.ts
(+21 files in other folders)
