[package]
name = "zen-canvas-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "zen_canvas_tauri"
crate-type = ["lib"]

[dependencies]
jwalk = "0.8.1"
notify = "8"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false, features = [] }
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
