[package]
name = "zen-canvas-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "zen_canvas_tauri"
crate-type = ["lib"]

[[bin]]
name = "zen-canvas"
path = "src/main.rs"
required-features = ["desktop-runtime"]

[features]
default = []
desktop-runtime = ["tauri/wry", "tauri/compression", "tauri/common-controls-v6"]

[dependencies]
dirs = "5"
jwalk = "0.8.1"
notify = "8"
r2d2 = "0.8"
r2d2_sqlite = { version = "0.34.0", features = ["bundled"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
tauri = { version = "2", default-features = false, features = [] }
tauri-plugin-dialog = "2.7.1"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
